[package]
name = "repositui"
version = "0.1.0"
authors = ["Khush Mehta <realkhushmehta@gmail.com>"]
edition = "2024"
description = "General purpose version control TUI"
readme = "README.md"
repository = "https://github.com/khushmmehta/repositui"
license = "Apache-2.0"
keywords = ["git", "jj", "VCS", "tui"]
categories = ["command-line-utilities", "data-structures", "development-tools"]

[[bin]]
name = "rt"
path = "src/main.rs"

[dependencies]
color-eyre = { version = "0.6.5" }
crossterm = { version = "0.29.0" }
ratatui = { version = "0.29.0" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140" }

[profile.dev]
opt-level = 1
lto = false

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = "thin"
strip = "debuginfo"
